--- a/index.html
+++ b/index.html
@@ -7,23 +7,27 @@
         <style type="text/css">
         	table{
         		text-align: center;
+                border-spacing: 0;
         	}
         	table,tr,th,td{
-        		border: 1px solid;
+        		border: 1px solid #333;
+                color:#333;
         	}
         	ul{
         		list-style-type:none;
+                padding: 0;
         	}
+            
         	.nav .tab{
         		display: inline-block;
 			    width: 50px;
-			   
 			    text-align: center;
 			    padding: 0 10px;
 			    margin: 0;
         	}
         	.active{
 				border-bottom: 2px solid #ab2b2b;
+                color: #ab2b2b;
         	}
         </style>
     </head>
